--- a/index.html
+++ b/index.html
@@ -1908,7 +1908,7 @@
 
             <div class="row">
 
-                <p class="copyright"> Shared by <i class="fa fa-love"></i><a href="https://bootstrapthemes.co">BootstrapThemes</a>
+                <p class="copyright"> Shared by <i class="fa fa-love"></i><a href="#">Hasan Imam</a>
 </p>
 
             </div>
